--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ git:
     depth: false
 script: ./ci.sh
 notifications:
-    email:
+    email:ryan.gerold@gmail.com
     #enter your email address below
         - 
